--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -23,21 +23,21 @@
   <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="trad-ira"><p class="calculator-validation-p" id="trad-ira-p"></p><br>
   
   <div class="calculator-input-text calculator-tooltip">
-    <span class="calculator-tooltip-text"><a href="/posts/what-is-sli" target="_blank">Learn about the SLI Deduction</a></span>
+    <span class="calculator-tooltip-text"><a href="/posts/what-is-sli" target="_blank">Learn about the SLI Deduction here</a></span>
     Student Loan Interest Paid: 
   </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="sli"><p class="calculator-validation-p" id="sli-p"></p><br>
   
   <h4 id="agi"> </h4>
   <div class="calculator-input-text calculator-tooltip">
-    <span class="calculator-tooltip-text"><a href="/posts/what-is-medical-expense" target="_blank">Learn about medical expenses</a></span>
+    <span class="calculator-tooltip-text"><a href="/posts/what-is-medical-expense" target="_blank">Learn about medical expenses here</a></span>
     Medical Expenses: 
   </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="medical-expenses"><p class="calculator-validation-p" id="medical-expenses-p"></p><br>
   <div class="calculator-input-text calculator-tooltip">
-    <span class="calculator-tooltip-text"><a href="/posts/what-is-salt" target="_blank">Read about the SALT</a></span>
+    <span class="calculator-tooltip-text"><a href="/posts/what-is-salt" target="_blank">Read about the SALT here</a></span>
     State and Local Tax (SALT): 
   </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="salt"><p class="calculator-validation-p" id="salt-p"></p><br>
   <div class="calculator-input-text calculator-tooltip">
-    <span class="calculator-tooltip-text"><a href="/posts/what-is-mortgage-interest" target="_blank">Learn about your mortgage interest</a></span>
+    <span class="calculator-tooltip-text"><a href="/posts/what-is-mortgage-interest" target="_blank">Learn about your mortgage interest here</a></span>
     Mortgage Interest Paid: 
   </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="mortgage-interest"><p class="calculator-validation-p" id="mortgage-interest-p"></p><br>
   
@@ -45,19 +45,56 @@
   <h4 id="taxable_income"> </h4>
   <h4 id="regular_income_tax"></h4>
 
-  <div class="calculator-input-text">Shares Exercised: </div>
-  <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised"><p class="calculator-validation-p" id="shares-exercised-p"></p><br>
-  <div class="calculator-input-text">Strike Price: </div>
-  <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price"><p class="calculator-validation-p" id="strike-price-p"></p><br>
-  <div class="calculator-input-text">Fair Market Value: </div>
-  <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv"><p class="calculator-validation-p" id="fmv-p"></p><br>
-  
+  <br><label for="iso_forms_count" class="calculator-tooltip">
+    <span class="calculator-tooltip-text"> If you did not exercise from any, you do not have AMT</span>
+    How many different ISO Grants did you exercise from?</label>
+  <select name="iso_forms_count" id="iso_forms_count">
+    <option value="iso_forms_count_one">1</option>
+    <option value="iso_forms_count_two">2</option>
+    <option value="iso_forms_count_three">3</option>
+  </select>
+
+  <div id="iso-form-container-for-all">
+    <div class ="iso-form-containers" id="iso-form-container-1">
+      <br>
+      <h5 class="iso-form-labels" id="iso-form-label-1"> Input the details of grant #1 below </h5>
+      <div class="calculator-input-text">Shares Exercised: </div>
+      <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-1-p"></p><br>
+      <div class="calculator-input-text">Strike Price: </div>
+      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-1-p"></p><br>
+      <div class="calculator-input-text">Fair Market Value: </div>
+      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-1-p"></p><br>
+      </div>
+
+    <div class ="iso-form-containers" id="iso-form-container-2">
+      <br>
+      <h5 class="iso-form-labels" id="iso-form-label-2"> Input the details of grant #2 below </h5>
+      <div class="calculator-input-text">Shares Exercised: </div>
+      <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised-2"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-2-p"></p><br>
+      <div class="calculator-input-text">Strike Price: </div>
+      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price-2"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-2-p"></p><br>
+      <div class="calculator-input-text">Fair Market Value: </div>
+      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv-2"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-2-p"></p><br>
+    </div>
+    
+    <div class ="iso-form-containers" id="iso-form-container-3">
+      <br>
+      <h5 class="iso-form-labels" id="iso-form-label-3"> Input the details of grant #3 below </h5>
+      <div class="calculator-input-text">Shares Exercised: </div>
+      <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised-3"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-3-p"></p><br>
+      <div class="calculator-input-text">Strike Price: </div>
+      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price-3"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-3-p"></p><br>
+      <div class="calculator-input-text">Fair Market Value: </div>
+      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv-3"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-3-p"></p><br>
+    </div>
+  </div>
+
   <h4 id="iso_spread_subtotal"> </h4>
   <h4 id="amti"> </h4>
   <h4 id="amt_deduction"> </h4>
   <h4 id="amti_final"> </h4>
 
-  <input type="button" id="calculator-submit" onclick=calculate_taxes() value="Calculate my AMT!">
+  <br><input type="button" id="calculator-submit" onclick=calculate_taxes() value="Calculate my AMT!">
 </form>
 
 <h3> Results: </h3>
@@ -67,6 +104,34 @@
 <!--<h2 id="placeholder"></h2>-->
 
 <script>
+
+  // Dyanmic forms for ISO Spread Calculator.
+  // Starts with 1 ISO Grant Form shown
+  // Also clears the error / validation message after every change
+  $(document).ready(function() {
+    $('#iso-form-container-2').hide();
+    $('#iso-form-container-3').hide();
+    
+    $('#iso_forms_count').change(function(){
+      if ($(this).val() == "iso_forms_count_one") {
+        $('#iso-form-container-3').hide();
+        $('#iso-form-container-2').hide();
+        $('#iso-form-container-1').show();
+        $('.calculator-validation-iso-forms-p').text("");
+      } else if ($(this).val() == "iso_forms_count_two") {
+        $('#iso-form-container-3').hide();
+        $('#iso-form-container-1').show();
+        $('#iso-form-container-2').show();
+        $('.calculator-validation-iso-forms-p').text("");
+      } else if ($(this).val() == "iso_forms_count_three") {
+        $('#iso-form-container-1').show();
+        $('#iso-form-container-2').show();
+        $('#iso-form-container-3').show();
+        $('.calculator-validation-iso-forms-p').text("");
+      }
+    })
+  })
+
     function check_min(input) {
       var input_id = document.getElementById(input.id).id;
       var p_id = input_id.concat('-p');
@@ -149,10 +214,28 @@
     var medical_expenses=empty_to_zero(document.getElementById("medical-expenses").value);
     var salt=empty_to_zero(document.getElementById("salt").value);
     var mortgage_interest=empty_to_zero(document.getElementById("mortgage-interest").value);
-    var shares_exercised=empty_to_zero(document.getElementById("shares-exercised").value);
-    var strike_price=empty_to_zero(document.getElementById("strike-price").value);
-    var fmv=empty_to_zero(document.getElementById("fmv").value);
+
+    var iso_form_count_obj = document.getElementById("iso_forms_count");
+    var iso_form_count = iso_form_count_obj.options[iso_form_count_obj.selectedIndex].value;
+
+    var shares_exercised_1=empty_to_zero(document.getElementById("shares-exercised-1").value);
+    var strike_price_1=empty_to_zero(document.getElementById("strike-price-1").value);
+    var fmv_1=empty_to_zero(document.getElementById("fmv-1").value);
+    var shares_exercised_2=empty_to_zero(document.getElementById("shares-exercised-2").value);
+    var strike_price_2=empty_to_zero(document.getElementById("strike-price-2").value);
+    var fmv_2=empty_to_zero(document.getElementById("fmv-2").value);
+    var shares_exercised_3=empty_to_zero(document.getElementById("shares-exercised-3").value);
+    var strike_price_3=empty_to_zero(document.getElementById("strike-price-3").value);
+    var fmv_3=empty_to_zero(document.getElementById("fmv-3").value);
     
+    // Does some validation based on the number of ISO Grants selected when user hits 'Calculate'. 
+    // Zeroes out any inputs from extra forms that were hidden
+    if (iso_form_count == "iso_forms_count_one") {
+      shares_exercised_2 = strike_price_2 = fmv_2 = shares_exercised_3 = strike_price_3 = fmv_3 = 0;
+    } else if (iso_form_count == "iso_forms_count_two") {
+      shares_exercised_3 = strike_price_3 = fmv_3 = 0;
+    }
+
     // Calculate Total Income
     var total_income = parseFloat(salary) + parseFloat(capital_gains);
     
@@ -246,7 +329,10 @@
     }
 
     // Calculate ISO Spread
-    var iso_spread_subtotal = parseFloat(shares_exercised) * (parseFloat(fmv) - parseFloat(strike_price));
+    var iso_spread_subtotal_1 = parseFloat(shares_exercised_1) * (parseFloat(fmv_1) - parseFloat(strike_price_1));
+    var iso_spread_subtotal_2 = parseFloat(shares_exercised_2) * (parseFloat(fmv_2) - parseFloat(strike_price_2));
+    var iso_spread_subtotal_3 = parseFloat(shares_exercised_3) * (parseFloat(fmv_3) - parseFloat(strike_price_3));
+    var iso_spread_subtotal = iso_spread_subtotal_1 + iso_spread_subtotal_2 + iso_spread_subtotal_3;
     // Calculate AMTI (before AMT exemption)
     if (deduction_category == 'Standard Deduction') {
       var amti = taxable_income + iso_spread_subtotal + standard_deduction;
