--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -35,12 +35,11 @@
     /*Tooltip text */
     .calculator-tooltip .calculator-tooltip-text {
     visibility: hidden;
-    width: 120px;
     background-color: black;
     color: white;
     text-align: center;
     margin: -30px;
-    padding: 5px 0;
+    padding: 5px 5px;
     border-radius: 6px;
     position: absolute;
     z-index: 1;
@@ -56,6 +55,12 @@
     /* Show the tooltip text when you mouse over the tooltip container */
     .calculator-tooltip:hover .calculator-tooltip-text {
     visibility: visible;
+    }
+
+    /* ISO Exercise Result Table Header */
+    #iso-planner-result-header {
+        background-color: var(--accent);
+        color: white;
     }
 </style>
 
