--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -7,12 +7,12 @@
   </select> <br><br>
 
   <div class="calculator-input-text">Salary: 
-  </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="salary"> <p class="calculator-validation-p" id="salary-p"></p><br>
+  </div> <input type="number" placeholder="0" class="calculate-form required_field" onchange=check_min(this) id="salary"> <p class="calculator-validation-p" id="salary-p"></p><br>
   
   <div class="calculator-input-text">Capital Gains: </div>
   <input type="number" placeholder="0" class="calculate-form" id="capital-gains"><br>
 
-  <h4 id="total_income"> </h4>
+  <h4 id="total_income" class="result-header"> </h4>
   <div class="calculator-input-text">Traditional 401k Contributions: </div> 
   <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="trad-401k"><p class="calculator-validation-p" id="trad-401k-p"></p><br>
   
@@ -27,7 +27,7 @@
     Student Loan Interest Paid: 
   </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="sli"><p class="calculator-validation-p" id="sli-p"></p><br>
   
-  <h4 id="agi"> </h4>
+  <h4 id="agi" class="result-header"> </h4>
   <div class="calculator-input-text calculator-tooltip">
     <span class="calculator-tooltip-text"><a href="/posts/what-is-medical-expense" target="_blank">Learn about medical expenses here</a></span>
     Medical Expenses: 
@@ -41,12 +41,12 @@
     Mortgage Interest Paid: 
   </div> <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="mortgage-interest"><p class="calculator-validation-p" id="mortgage-interest-p"></p><br>
   
-  <h4 id="final_deduction"> </h4>
-  <h4 id="taxable_income"> </h4>
-  <h4 id="regular_income_tax"></h4>
+  <h4 id="final_deduction" class="result-header"> </h4>
+  <h4 id="taxable_income" class="result-header"> </h4>
+  <h4 id="regular_income_tax" class="result-header"></h4>
 
   <br><label for="iso_forms_count" class="calculator-tooltip">
-    <span class="calculator-tooltip-text"> If you did not exercise from any, you do not have AMT</span>
+    <span class="calculator-tooltip-text"> This calculator is only relevant if you exercised ISOs! </span>
     How many different ISO Grants did you exercise from?</label>
   <select name="iso_forms_count" id="iso_forms_count">
     <option value="iso_forms_count_one">1</option>
@@ -57,57 +57,58 @@
   <div id="iso-form-container-for-all">
     <div class ="iso-form-containers" id="iso-form-container-1">
       <br>
-      <h5 class="iso-form-labels" id="iso-form-label-1"> Input the details of grant #1 below </h5>
+      <h5 class="iso-form-labels" id="iso-form-label-1"> Input the details of grant #1 (FMV should be at time of exercise) </h5>
       <div class="calculator-input-text">Shares Exercised: </div>
-      <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-1-p"></p><br>
+      <input type="number" placeholder="0" class="calculate-form required_field" onchange=check_min(this) id="shares-exercised-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-1-p"></p><br>
       <div class="calculator-input-text">Strike Price: </div>
-      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-1-p"></p><br>
-      <div class="calculator-input-text">Fair Market Value: </div>
-      <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-1-p"></p><br>
+      <input type="number" placeholder="0.00" class="calculate-form required_field" onchange=check_min(this) id="strike-price-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-1-p"></p><br>
+      <div class="calculator-input-text">Fair Market Value (FMV): </div>
+      <input type="number" placeholder="0.00" class="calculate-form required_field" onchange=check_min(this) id="fmv-1"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-1-p"></p><br>
       </div>
 
     <div class ="iso-form-containers" id="iso-form-container-2">
       <br>
-      <h5 class="iso-form-labels" id="iso-form-label-2"> Input the details of grant #2 below </h5>
+      <h5 class="iso-form-labels" id="iso-form-label-2"> Input the details of grant #2 (FMV should be at time of exercise) </h5>
       <div class="calculator-input-text">Shares Exercised: </div>
       <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised-2"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-2-p"></p><br>
       <div class="calculator-input-text">Strike Price: </div>
       <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price-2"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-2-p"></p><br>
-      <div class="calculator-input-text">Fair Market Value: </div>
+      <div class="calculator-input-text">Fair Market Value (FMV): </div>
       <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv-2"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-2-p"></p><br>
     </div>
     
     <div class ="iso-form-containers" id="iso-form-container-3">
       <br>
-      <h5 class="iso-form-labels" id="iso-form-label-3"> Input the details of grant #3 below </h5>
+      <h5 class="iso-form-labels" id="iso-form-label-3"> Input the details of grant #3 (FMV should be at time of exercise) </h5>
       <div class="calculator-input-text">Shares Exercised: </div>
       <input type="number" placeholder="0" class="calculate-form" onchange=check_min(this) id="shares-exercised-3"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="shares-exercised-3-p"></p><br>
       <div class="calculator-input-text">Strike Price: </div>
       <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="strike-price-3"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="strike-price-3-p"></p><br>
-      <div class="calculator-input-text">Fair Market Value: </div>
+      <div class="calculator-input-text">Fair Market Value (FMV): </div>
       <input type="number" placeholder="0.00" class="calculate-form" onchange=check_min(this) id="fmv-3"><p class="calculator-validation-p calculator-validation-iso-forms-p" id="fmv-3-p"></p><br>
     </div>
   </div>
 
-  <h4 id="iso_spread_subtotal"> </h4>
-  <h4 id="amti"> </h4>
-  <h4 id="amt_deduction"> </h4>
-  <h4 id="amti_final"> </h4>
+  <h4 id="iso_spread_subtotal" class="result-header"> </h4>
+  <h4 id="amti" class="result-header"> </h4>
+  <h4 id="amt_deduction" class="result-header"> </h4>
+  <h4 id="amti_final" class="result-header"> </h4>
 
-  <br><input type="button" id="calculator-submit" onclick=calculate_taxes() value="Calculate my AMT!">
+  <br><input type="button" id="calculator-submit" onclick=check_required() value="Calculate my AMT!">
 </form>
 
 <h3> Results: </h3>
-<h4 id="amt_tax_owed"> </h4>
-<h4 id="tax_confirmation_phrase"> </h4>
+<h4 id="amt_tax_owed" class="result-header"> </h4>
+<h4 id="tax_confirmation_phrase" class="result-header"> </h4>
 
 <!--<h2 id="placeholder"></h2>-->
 
 <script>
 
-  // Dyanmic forms for ISO Spread Calculator.
+  // Dyanmic forms for ISO Spread Details
   // Starts with 1 ISO Grant Form shown
-  // Also clears the error / validation message after every change
+  // Also clears the error / validation message after every change, and adds/removes required_field class for check_required
+  // Also clears the results messages
   $(document).ready(function() {
     $('#iso-form-container-2').hide();
     $('#iso-form-container-3').hide();
@@ -118,32 +119,80 @@
         $('#iso-form-container-2').hide();
         $('#iso-form-container-1').show();
         $('.calculator-validation-iso-forms-p').text("");
+        $('#shares-exercised-2').removeClass("required_field");
+        $('#strike-price-2').removeClass("required_field");
+        $('#fmv-2').removeClass("required_field");
+        $('#shares-exercised-3').removeClass("required_field");
+        $('#strike-price-3').removeClass("required_field");
+        $('#fmv-3').removeClass("required_field");
+        $('.result-header').text('');
+
       } else if ($(this).val() == "iso_forms_count_two") {
         $('#iso-form-container-3').hide();
         $('#iso-form-container-1').show();
         $('#iso-form-container-2').show();
         $('.calculator-validation-iso-forms-p').text("");
+        $('#shares-exercised-2').addClass("required_field");
+        $('#strike-price-2').addClass("required_field");
+        $('#fmv-2').addClass("required_field");
+        $('#shares-exercised-3').removeClass("required_field");
+        $('#strike-price-3').removeClass("required_field");
+        $('#fmv-3').removeClass("required_field");
+        $('.result-header').text('');
+
       } else if ($(this).val() == "iso_forms_count_three") {
         $('#iso-form-container-1').show();
         $('#iso-form-container-2').show();
         $('#iso-form-container-3').show();
         $('.calculator-validation-iso-forms-p').text("");
+        $('#shares-exercised-2').addClass("required_field");
+        $('#strike-price-2').addClass("required_field");
+        $('#fmv-2').addClass("required_field");
+        $('#shares-exercised-3').addClass("required_field");
+        $('#strike-price-3').addClass("required_field");
+        $('#fmv-3').addClass("required_field");
+        $('.result-header').text('');
+
       }
     })
   })
 
-    function check_min(input) {
-      var input_id = document.getElementById(input.id).id;
-      var p_id = input_id.concat('-p');
-      if (input.value < 0) {
-        input.value = "";
-        document.getElementById(p_id).innerHTML = "This number must not be negative";
+  function check_required() {
+    var required_array = document.getElementsByClassName("required_field");
+    var confirmation_array = [];
+      
+    for (i=0; i<required_array.length; i++) {
+      if (required_array[i].value == "") {
+        var p_id = required_array[i].id;
+        p_id = p_id.concat('-p');
+        document.getElementById(p_id).innerHTML = "This field is required";
+        confirmation_array.push(false);
       } else {
-        document.getElementById(p_id).innerHTML = "";
+        confirmation_array.push(true);
       }
     }
+    var confirmation = confirmation_array.every(Boolean);
+    if(confirmation) {
+      calculate_taxes();
+    }
+  }
+  function check_min(input) {
+    var input_id = document.getElementById(input.id).id;
+    var p_id = input_id.concat('-p');
+    if (input.value < 0) {
+      input.value = "";
+      document.getElementById(p_id).innerHTML = "This number must not be negative";
+    } else {
+      document.getElementById(p_id).innerHTML = "";
+    }
+  }
 
-    function calculate_taxes() {
+  var currency_formatter = new Intl.NumberFormat('en-US', {
+    style: 'currency',
+    currency: 'USD',
+  });
+  
+  function calculate_taxes() {
 
     // First clear any error / validation messages. Any further validation below will re-set them if needed
     var all_validation_messages = document.getElementsByClassName("calculator-validation-p");
@@ -338,7 +387,6 @@
       var amti = taxable_income + iso_spread_subtotal + standard_deduction;
     } else {
       var amti = taxable_income + iso_spread_subtotal + parseFloat(salt) + parseFloat(medical_expenses);
-
     }
     // AMT Deduction Calculation, including Phase Out
     if (amti > amt_phase) {
@@ -348,6 +396,7 @@
       amt_deduction = 0
     }
     var amti_final = amti - parseFloat(amt_deduction);
+
     
     // Caculate AMT Tax, including Brackets
     if (amti_final > amt_tax_brackets) {
@@ -357,28 +406,40 @@
     }
 
     if (regular_income_tax >= amt_tax_owed) {
-      var tax_confirmation_phrase = "Because your Regular Income Tax is more than your AMT, you do not need to pay any additional AMT!";
+      var tax_confirmation_phrase = "But because your Regular Income Tax is more than your AMT, you do not need to pay any additional AMT!";
     } else {
       var tax_diff = amt_tax_owed - regular_income_tax;
-      var tax_confirmation_phrase = `Because your AMT is greater than your Regular Income Tax, you will need to pay ${tax_diff} more in taxes this year`;
+      tax_diff = currency_formatter.format(tax_diff);
+      //tax_diff = tax_diff.toFixed(2);
+      var tax_confirmation_phrase = `Because your AMT is greater than your Regular Income Tax, you will need to pay ${tax_diff} more in addition to your regular income tax this year`;
     }
     
     // AMT CREDIT?
     // DEPENDENT CREDIT?
 
-    //if (!isNaN(agi)) {
-        document.getElementById("total_income").innerHTML="Your Total Income is " + total_income;
-        //document.getElementById("magi").innerHTML="MAGI is " + magi;
-        document.getElementById("agi").innerHTML="Your Adjusted Gross Income (AGI) is " + agi;
-        document.getElementById("final_deduction").innerHTML="You took the " + deduction_category + " and your deduction is " + regular_deduction_final;
-        document.getElementById("taxable_income").innerHTML="Your Taxable Income is " + taxable_income;
-        document.getElementById("regular_income_tax").innerHTML= "Your Regular Income Tax is: " + regular_income_tax;
-        document.getElementById("iso_spread_subtotal").innerHTML="Your ISO Spread is " + iso_spread_subtotal;
-        document.getElementById("amti").innerHTML="Your AMT Taxable Income (AMTI) is " + amti;
-        document.getElementById("amt_deduction").innerHTML="Your AMT deduction is " + amt_deduction;
-        document.getElementById("amti_final").innerHTML="Your Final AMT Taxable Income is " + amti_final;
-        document.getElementById("amt_tax_owed").innerHTML="Your final AMT owed is " + amt_tax_owed;
-        document.getElementById("tax_confirmation_phrase").innerHTML= tax_confirmation_phrase;
-    //}
-    }
+    total_income = currency_formatter.format(total_income);
+    agi = currency_formatter.format(agi);
+    regular_deduction_final = currency_formatter.format(regular_deduction_final);
+    taxable_income = currency_formatter.format(taxable_income);
+    regular_income_tax = currency_formatter.format(regular_income_tax);
+    iso_spread_subtotal = currency_formatter.format(iso_spread_subtotal);
+    amti = currency_formatter.format(amti);
+    amt_deduction = currency_formatter.format(amt_deduction);
+    amti_final = currency_formatter.format(amti_final);
+    amt_tax_owed = currency_formatter.format(amt_tax_owed);
+
+
+    document.getElementById("total_income").innerHTML="Your Total Income is " + total_income;
+    //document.getElementById("magi").innerHTML="MAGI is " + magi;
+    document.getElementById("agi").innerHTML="Your Adjusted Gross Income (AGI) is " + agi;
+    document.getElementById("final_deduction").innerHTML="You took the " + deduction_category + " and your deduction is " + regular_deduction_final;
+    document.getElementById("taxable_income").innerHTML="Your Taxable Income is " + taxable_income;
+    document.getElementById("regular_income_tax").innerHTML= "Your Regular Income Tax is: " + regular_income_tax;
+    document.getElementById("iso_spread_subtotal").innerHTML="Your ISO Spread is " + iso_spread_subtotal;
+    document.getElementById("amti").innerHTML="Your AMT Taxable Income (AMTI) is " + amti;
+    document.getElementById("amt_deduction").innerHTML="Your AMT deduction is " + amt_deduction;
+    document.getElementById("amti_final").innerHTML="Your Final AMT Taxable Income is " + amti_final;
+    document.getElementById("amt_tax_owed").innerHTML="The Alternative Minimum Tax you owe is: " + amt_tax_owed;
+    document.getElementById("tax_confirmation_phrase").innerHTML= tax_confirmation_phrase;
+  }
 </script>
